# middle-uncommented

./: .bash_cmake  .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  README.txt  RUNNING.md  middle.cfg  prefs.json
mysql_fake/: .gitignore  ck.ddl  fk.ddl  pk.ddl  tc.ddl  uq.ddl
src/: .gitignore  CMakeLists.txt
src/main/: .gitignore  CMakeLists.txt  logging.cc  logging.h  main.cc  options.cc  options.h
src/middle_app/: .gitignore  CMakeLists.txt  app_version.cc  app_version.h  dbunit_hsqldb_ddl_table_migrator.cc  dbunit_hsqldb_ddl_table_migrator.h  dbunit_pkvsid_ddl_table_migrator.cc  dbunit_pkvsid_ddl_table_migrator.h  dbunit_xml_ddl_names_filereader.cc  dbunit_xml_ddl_names_filereader.h  ddl_mass_migrator.cc  ddl_mass_migrator.h  ddl_sources.cc  ddl_sources.h  ddl_table_migrator_prefs_error.h  ddl_table_migrator_prefs_reader.cc  ddl_table_migrator_prefs_reader.h  static_ddl_table_migrator_prefs.cc  static_ddl_table_migrator_prefs.h
src/normal_ddl/: .gitignore  CMakeLists.txt  ddl_column_rules.cc  ddl_column_rules.h  ddl_default_value_rule_macro.cc  ddl_default_value_rule_macro.h  ddl_migration_msg.cc  ddl_migration_msg.h  ddl_names.cc  ddl_names.h  ddl_names_filereader.h  ddl_stnames_migrator.cc  ddl_stnames_migrator.h  ddl_table_migrator.cc  ddl_table_migrator.h  ddl_table_migrator_prefs.h
src/odbc_query/: .gitignore  CMakeLists.txt  odbc_query.cc  odbc_query.h
src/sqlsvr_ddl/: .gitignore  CMakeLists.txt  sqlsvr_ddl_ck_mapper.cc  sqlsvr_ddl_ck_mapper.h  sqlsvr_ddl_connection_error.h  sqlsvr_ddl_data_source.cc  sqlsvr_ddl_data_source.h  sqlsvr_ddl_fk_mapper.cc  sqlsvr_ddl_fk_mapper.h  sqlsvr_ddl_hidable.h  sqlsvr_ddl_pk_mapper.cc  sqlsvr_ddl_pk_mapper.h  sqlsvr_ddl_queries.h  sqlsvr_ddl_stnames_migrator.cc  sqlsvr_ddl_stnames_migrator.h  sqlsvr_ddl_tc_mapper.cc  sqlsvr_ddl_tc_mapper.h  sqlsvr_ddl_uq_mapper.cc  sqlsvr_ddl_uq_mapper.h
src/universals/: .gitignore  CMakeLists.txt  macro_args_expander.cc  macro_args_expander.h  ochain.h  string_backed_fos.h  text_processor.h  uc_string.cc  uc_string.h
test/: .gitignore  CMakeLists.txt
test/middle_app/: .gitignore  CMakeLists.txt  test-ddl_table_migrator_prefs_reader.cc
test/normal_ddl/: CMakeLists.txt  test-ddl_default_value_rule_macro_expander.cc
test/sqlsvr_ddl/: CMakeLists.txt  main.cc  mock-sqlsvr_ddl_queries.h  test-sqlsvr_ddl_stnames_migrator_impl.cc  test-sqlsvr_ddl_stnames_migrator_impl.h  todo.txt
test/universals/: .gitignore  CMakeLists.txt  main.cc  test-counter_ochain.cc  test-string_backed_counter_ochain.cc
w64-mingw/: toolchain-w64-mingw.cmake
w64-mingw/boost/: .gitignore  README.txt  build.sh
w64-mingw/icu/: .gitignore  README.txt  build.sh
w64-mingw/xerces-c/: .gitignore  README.txt  build.sh
